--- a/src/EventTracker.DataModel/EventTracker.DataModel.csproj
+++ b/src/EventTracker.DataModel/EventTracker.DataModel.csproj
@@ -39,6 +39,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -51,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyResolver.cs" />
     <Compile Include="Generated\Event.cs">
       <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
     </Compile>
@@ -108,6 +110,12 @@
       <DependentUpon>EventTrackerDataModel.edmx</DependentUpon>
       <LastGenOutput>EventTrackerDataModel.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EventTracker.Resolver\EventTracker.Resolver.csproj">
+      <Project>{bf4932d7-a685-4ac1-b4d4-4fe345a0d555}</Project>
+      <Name>EventTracker.Resolver</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
