--- a/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
+++ b/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
@@ -48,7 +48,9 @@
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="IEventServices.cs" />
     <Compile Include="EventServices.cs" />
+    <Compile Include="IUserServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventTracker.Business\EventTracker.BusinessModel.csproj">
