--- a/src/EventTrackerAPI/Web.config
+++ b/src/EventTrackerAPI/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="EventTrackerDBContext" connectionString="Data Source=NAD2LCDV0001JLX\SQLEXPRESS;Initial Catalog=EventTrackerDB;User ID=webapi_user;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key ="AuthTokenExpiry" value="900"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
