--- a/src/EventTracker.Business/EventTracker.BusinessModel.csproj
+++ b/src/EventTracker.Business/EventTracker.BusinessModel.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Event.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="AppUser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
