--- a/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
+++ b/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
@@ -47,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyResolver.cs" />
+    <Compile Include="EventAttendanceServices.cs" />
     <Compile Include="IEventServices.cs" />
     <Compile Include="EventServices.cs" />
     <Compile Include="ITokenServices.cs" />
