--- a/src/EventTracker.DataModel/EventTracker.DataModel.csproj
+++ b/src/EventTracker.DataModel/EventTracker.DataModel.csproj
@@ -54,45 +54,46 @@
   <ItemGroup>
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="Generated\Event.cs">
-      <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
+      <DependentUpon>EventTracker.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\EventAttendance.cs">
-      <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
+      <DependentUpon>EventTracker.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTrackerDataModel.Context.cs">
+    <Compile Include="Generated\EventTracker.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTrackerDataModel.Context.tt</DependentUpon>
+      <DependentUpon>EventTracker.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTrackerDataModel.cs">
+    <Compile Include="Generated\EventTracker.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
+      <DependentUpon>EventTracker.tt</DependentUpon>
     </Compile>
-    <Compile Include="Generated\EventTrackerDataModel.Designer.cs">
+    <Compile Include="Generated\EventTracker.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventTrackerDataModel.edmx</DependentUpon>
+      <DependentUpon>EventTracker.edmx</DependentUpon>
     </Compile>
     <Compile Include="Generated\Token.cs">
-      <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
+      <DependentUpon>EventTracker.tt</DependentUpon>
     </Compile>
     <Compile Include="Generated\User.cs">
-      <DependentUpon>EventTrackerDataModel.tt</DependentUpon>
+      <DependentUpon>EventTracker.tt</DependentUpon>
     </Compile>
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EventAttendanceRepository.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="Generated\EventTrackerDataModel.edmx">
+    <EntityDeploy Include="Generated\EventTracker.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>EventTrackerDataModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>EventTracker.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Generated\EventTrackerDataModel.edmx.diagram">
-      <DependentUpon>EventTrackerDataModel.edmx</DependentUpon>
+    <None Include="Generated\EventTracker.edmx.diagram">
+      <DependentUpon>EventTracker.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -100,22 +101,22 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Generated\EventTrackerDataModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EventTrackerDataModel.edmx</DependentUpon>
-      <LastGenOutput>EventTrackerDataModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Generated\EventTrackerDataModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EventTrackerDataModel.edmx</DependentUpon>
-      <LastGenOutput>EventTrackerDataModel.cs</LastGenOutput>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\EventTracker.Resolver\EventTracker.Resolver.csproj">
       <Project>{bf4932d7-a685-4ac1-b4d4-4fe345a0d555}</Project>
       <Name>EventTracker.Resolver</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Generated\EventTracker.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventTracker.edmx</DependentUpon>
+      <LastGenOutput>EventTracker.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Generated\EventTracker.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventTracker.edmx</DependentUpon>
+      <LastGenOutput>EventTracker.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
