Make use of Linq projection. Linq with group by, etc

--- a/src/EventTracker.Business/EventTracker.BusinessModel.csproj
+++ b/src/EventTracker.Business/EventTracker.BusinessModel.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="EventAttendance.cs" />
     <Compile Include="Event.cs" />
+    <Compile Include="EventAttendanceSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="AppUser.cs" />
