--- a/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
+++ b/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ITokenServices.cs" />
     <Compile Include="IUserServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryableExtensions.cs" />
     <Compile Include="TokenServices.cs" />
     <Compile Include="UserServices.cs" />
   </ItemGroup>
