--- a/src/EventTracker.Business/EventTracker.BusinessModel.csproj
+++ b/src/EventTracker.Business/EventTracker.BusinessModel.csproj
@@ -40,12 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUser.cs" />
+    <Compile Include="Membership\BaseMember.cs" />
     <Compile Include="EventAttendance.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventAttendanceSummary.cs" />
+    <Compile Include="Membership\NewMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token.cs" />
-    <Compile Include="Member.cs" />
+    <Compile Include="Membership\Member.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
