--- a/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
+++ b/src/EventTracker.BusinessServices/EventTracker.BusinessServices.csproj
@@ -54,8 +54,10 @@
     <Compile Include="EventAttendanceServices.cs" />
     <Compile Include="IEventServices.cs" />
     <Compile Include="EventServices.cs" />
+    <Compile Include="IMembershipServices.cs" />
     <Compile Include="ITokenServices.cs" />
     <Compile Include="IUserServices.cs" />
+    <Compile Include="MembershipServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryableExtensions.cs" />
     <Compile Include="TokenServices.cs" />
