--- a/src/EventTrackerAdminWeb/packages.config
+++ b/src/EventTrackerAdminWeb/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
-  <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net452" />
+  <package id="Bootstrap.Datepicker" version="1.4.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
