--- a/src/EventTrackerAdminWeb/packages.config
+++ b/src/EventTrackerAdminWeb/packages.config
@@ -21,6 +21,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net452" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net452" />
