--- a/src/EventTracker.Business/EventTracker.BusinessModel.csproj
+++ b/src/EventTracker.Business/EventTracker.BusinessModel.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Membership\NewMember.cs" />
     <Compile Include="Menus\MenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchParameter.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Membership\Member.cs" />
   </ItemGroup>
