--- a/src/EventTrackerAdminWeb/packages.config
+++ b/src/EventTrackerAdminWeb/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="0.13.4" targetFramework="net452" />
+  <package id="AngularJS.Core" version="1.4.6" targetFramework="net452" />
+  <package id="AngularJS.Route" version="1.4.6" targetFramework="net452" />
+  <package id="AngularJS.Sanitize" version="1.4.6" targetFramework="net452" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
