Added the angular version of the Members/index.html

--- a/src/EventTrackerAdminWeb/packages.config
+++ b/src/EventTrackerAdminWeb/packages.config
@@ -9,10 +9,10 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="Bootstrap.Datepicker" version="1.4.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
-  <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="DotNet.Highcharts" version="4.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
-  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -21,10 +21,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="ngGrid" version="2.0.12" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
