--- a/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
+++ b/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
@@ -356,7 +356,6 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -365,10 +364,13 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MembershipController.cs" />
     <Compile Include="Controllers\MenuBarController.cs" />
+    <Compile Include="Filter\CustomAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -383,8 +385,12 @@
     <Content Include="Views\Membership\Index.cshtml" />
     <Content Include="Views\Membership\Edit.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
-    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Shared\_AdminLayout.cshtml" />
+    <Content Include="Views\Error\AccessDenied.cshtml" />
+    <Content Include="Views\Membership\EditHouseHold.cshtml" />
+    <Content Include="Views\Membership\_EditMemberHouseHold.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -396,6 +402,7 @@
     <Folder Include="app\Directives\" />
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventTracker.BusinessServices\EventTracker.BusinessServices.csproj">
