--- a/src/EventTrackerAdminWeb/Web.config
+++ b/src/EventTrackerAdminWeb/Web.config
@@ -14,7 +14,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-    <pages pageBaseType="System.Web.Mvc.WebViewPage">
+    <!-- <pages pageBaseType="System.Web.Mvc.WebViewPage"> -->
+    <pages pageBaseType="EventTracker.BusinessModel.Authentication.BaseViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
@@ -22,6 +23,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="EventTrackerAdminWeb" />
+        
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -38,6 +40,9 @@
     <compilation debug="true" targetFramework="4.5.2">
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms name="ETADM_WEB_USER" loginUrl="~/Account/Login"  timeout="2880"/>
+    </authentication>    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -84,4 +89,5 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
