--- a/src/EventTracker.Business/EventTracker.BusinessModel.csproj
+++ b/src/EventTracker.Business/EventTracker.BusinessModel.csproj
@@ -82,6 +82,8 @@
     <Compile Include="Event.cs" />
     <Compile Include="EventAttendanceSummary.cs" />
     <Compile Include="Membership\HouseHold.cs" />
+    <Compile Include="Membership\HouseHoldDetailsViewModel.cs" />
+    <Compile Include="Membership\NewHouseholdMember.cs" />
     <Compile Include="Membership\NewMember.cs" />
     <Compile Include="Menus\MenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
