check null for events

--- a/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
+++ b/src/EventTrackerAdminWeb/EventTrackerAdminWeb.csproj
@@ -358,18 +358,18 @@
     <Content Include="Views\Shared\_MenuBar - Copy.cshtml" />
     <Content Include="Views\Events\Index - Copy.cshtml" />
     <Content Include="Views\Events\Edit.cshtml" />
-    <Content Include="Views\HouseHold\_Members.cshtml" />
+    <Content Include="Views\Household\_Members.cshtml" />
     <Content Include="Views\Membership\EditMember.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\Error\AccessDenied.cshtml" />
-    <Content Include="Views\HouseHold\EditHousehold.cshtml" />
-    <Content Include="Views\HouseHold\DeleteHouseHold.cshtml" />
-    <None Include="Views\HouseHold\HouseHolds.cshtml" />
+    <Content Include="Views\Household\EditHousehold.cshtml" />
+    <Content Include="Views\Household\DeleteHouseHold.cshtml" />
+    <None Include="Views\Household\Households.cshtml" />
     <Content Include="Views\Membership\Members.cshtml" />
-    <Content Include="Views\HouseHold\_AddNewHouseholdMember.cshtml" />
+    <Content Include="Views\Household\_AddNewHouseholdMember.cshtml" />
     <Content Include="Views\Membership\MembershipHistory.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
